--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 .idea/workspace.xml
 Casino/.idea/workspace.xml
 Casino/.idea/workspace.xml
+Casino/.idea/workspace.xml
+Casino/src/main/java/ch/bbbaden/casino/MainApp.java
