intellij does stuff again

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Casino/.idea/workspace.xml
 Casino/.idea/workspace.xml
 Casino/.idea/workspace.xml
 Casino/src/main/java/ch/bbbaden/casino/MainApp.java
+Casino/.idea/workspace.xml
