created admin gui

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 Casino/.idea/workspace.xml
 Casino/.idea/workspace.xml
+Casino/.idea/vcs.xml
+Casino/target/classes/ch/bbbaden/casino/AdminUser.class
+Casino/.idea/vcs.xml
